see #11924 - make the JRE expiration date detection system work with Java 9
git-svn-id: http://josm.openstreetmap.de/svn/trunk@12238 0c6e7542-c601-0410-84e7-c038aed88b3b